syntax = "proto3";

import "google/protobuf/empty.proto";

package metricssservice;

option go_package = "metricssservice/proto";

enum Types{
        GAUGE = 0;
        COUNTER = 1;
}

message Metric {
    oneof data {
        int64 delta = 1;
        double value = 2;
    }

    string id = 3;
    Types type = 4;
}

message UpdateRequest{
    Metric metric = 1;
}

message UpdateResponse {
    Metric metric = 1;
}

message UpdatesRequest{
    repeated Metric metrics = 1;
}

service Metrics{
    rpc Update(UpdateRequest) returns (UpdateResponse);
    rpc Updates(UpdatesRequest) returns (google.protobuf.Empty);
}